--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   any_link_preview: ^3.0.2
   image_picker: ">=0.8.9 <2.0.0"
   audio_waveforms: ^1.2.0
+  # flutter_chat_reactions: ^0.1.0
   # For formatting time locale in message receipts
   timeago: ^3.7.0
   cached_network_image: ^3.4.1
