--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,9 @@ dependencies:
   # For formatting time locale in message receipts
   timeago: ^3.7.0
   cached_network_image: ^3.4.1
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.1
-
-flutter:
